--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -4,3 +4,6 @@ fr:
   projects:
     index:
       page-name: 'Les projects'
+      heterodox: >
+           heterodox est le double maléfique de ce studio. Ses projets s'attaquent aux taboos, inhibitions et vérités inavouées. Ils s'affranchissent de la norme et du normal ; Ils ne respectent que leurs propres règles
+      heterodox-link: 'Montrez-moi heterodox' 
