--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,5 +8,5 @@ en:
     index:
       page-name: 'Projects'
       heterodox: >
-       Heterodox is this studios' evil twin. Its projects tackle taboos, inhibitions and hidden truths. They stray away from conventions and abide only by their own rules
+       Heterodox is this studios' evil twin. Its projects are critical, satirical, erotic or esthetic. They tackle taboos, inhibitions and hidden truth. For Heterodox, design is synonymous with expression and alternative
       heterodox-link: 'Show me heterodox'
