--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -8,5 +8,5 @@ fr:
     index:
       page-name: 'Les projects'
       heterodox: >
-           heterodox est le double maléfique de ce studio. Ses projets s'attaquent aux taboos, inhibitions et vérités inavouées. Ils s'affranchissent de la norme et du normal ; Ils ne respectent que leurs propres règles
+           Heterodox est le double maléfique de ce studio. Ses projets sont critiques, satiriques, érotiques ou esthétiques. Ils s'affranchissent des taboos, des inhibitions et des vérités inavouées. Pour Heterodox, le design est synonyme d'expression et d'aternative 
       heterodox-link: 'Montrez-moi heterodox'
