--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -3,6 +3,7 @@ fr:
   about: 'A Propos'
   home: 'Accceuil'
   all-projects: 'Tous'
+  the-projects: 'Projets'
   graphic-design: 'Design Graphique'
   industrial-design: 'Design Industriel'
   record: 'Titre (Francais)'
