--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@ en:
   about: 'About'
   home: 'Home'
   all-projects: 'All'
+  the-projects: 'Projects'
   graphic-design: 'Graphic Design'
   industrial-design: 'Industrial Design'
   record: 'Title (English)'
