--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,7 +1,7 @@
 fr:
 
   about: 'À Propos'
-  home: 'Accceuil'
+  home: 'Acceuil'
   all-projects: 'Tous'
   the-projects: 'Projets'
   graphic-design: 'Design Graphique'
