--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
 
-  about: 'About'
+  info: 'Info'
   home: 'Home'
   all-projects: 'All'
   the-projects: 'Projects'
@@ -13,4 +13,4 @@ en:
       heterodox: >
        Heterodox is this studios' evil twin. Its projects are critical, satirical, erotic or esthetic. They tackle taboos, inhibitions and hidden truth. For Heterodox, design is synonymous with expression and alternative
       heterodox-link: 'Show me heterodox'
-  about-text: 'Nowadays, every studio seems to have adopted design’s new definition. They’re all moving beyond pure looks and aesthetics, and instead, addressing core issues or challenges. This shift led them to broaden their scope, their methodology is now “holitistic” and their works multi-disciplinary. Studios create anything (products, graphics, systems etc. ) that resolves a problem. And us? We’re essentially doing the same. Aren’t we?      '
+  about-text: 'Nowadays, every studio seems to have adopted design’s new definition. They’re all moving beyond pure looks and aesthetics, and instead, addressing core issues or challenges. This shift led them to broaden their scope, their methodology is now “holitistic” and their works multi-disciplinary. Studios create anything - products, graphics, systems, etc. - that resolves a problem. And us? We’re essentially doing the same. Aren’t we?      '
