--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,6 +1,6 @@
 fr:
 
-  about: 'À Propos'
+  more: 'Info'
   home: 'Acceuil'
   all-projects: 'Tous'
   the-projects: 'Projets'
@@ -13,4 +13,5 @@ fr:
       heterodox: >
            Heterodox est le double maléfique de ce studio. Ses projets sont critiques, satiriques, érotiques ou esthétiques. Ils s'affranchissent des taboos, des inhibitions et des vérités inavouées. Pour Heterodox, le design est synonyme d'expression et d'aternative
       heterodox-link: 'Montrez-moi heterodox'
-  about-text: 'Today, every studio seems to have adopted design’s new definition. They’re all moving beyond pure looks and aesthetics, and instead, addressing core issues or challenges. This shift led them to broaden their scope, their methodology is now “holitistic” and their works multi-disciplinary. Studios create anything (products, graphics, systems etc. ) that resolves a problem. And us? We’re essentially doing the same. Aren’t we?      '
+  about-text: >
+          De nos jours, tous les studios semblent avoir adoptés la nouvelle définition du design. Ils dépassent l'esthétique et les apparences et s'intéressent à l’essentiel, au problématique. Cette transition incite les professionnels à élargir leurs horizons, leur méthode devient holistique et leurs travaux, multidisciplinaires. Les studio créent alors tout artefact - produits, graphisme, systèmes, etc. -  qui puisse répondre à un enjeu. Et nous? Nous faisions pareil. Non?
