--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,3 +18,5 @@ en:
   medium: 'by'
   byphone: 'or phone'
   about: 'About'
+  desc: >
+    Labaki is just another multi-disciplinary, ever-evolving, problem-solving design studio. Isn't it?
