--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -19,3 +19,5 @@ fr:
   medium: 'par'
   byphone: 'ou au téléphone'
   about: 'À propos'
+  desc: >
+    Labaki est un studio de design multi-disciplinaire engagé a améliorer l'habitabilité du monde. Comme tous les autres, non?
