--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -20,4 +20,4 @@ fr:
   byphone: 'ou au téléphone'
   about: 'À propos'
   desc: >
-    Labaki est un studio de design multi-disciplinaire engagé a améliorer l'habitabilité du monde. Comme tous les autres, non?
+    Labaki est un studio de design multidisciplinaire engagé à améliorer l'habitabilité du monde. Comme tous les autres, non?
