--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,7 +1,7 @@
 fr:
 
   more: 'Infos'
-  home: 'Acceuil'
+  home: 'Accueil'
   all-projects: 'Tous'
   the-projects: 'Projets'
   graphic-design: 'Design Graphique'
