Colors and link

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,3 +20,4 @@ en:
   about: 'About'
   desc: >
     Labaki is just another multi-disciplinary, ever-evolving, problem-solving design studio. Isn't it?
+  website-h:  http://www.heterodox.design/en/projects 
