--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -21,3 +21,4 @@ fr:
   about: 'À propos'
   desc: >
     Labaki est un studio de design multidisciplinaire engagé à améliorer l'habitabilité du monde. Comme tous les autres, non?
+  website-h: http://www.heterodox.design/fr/projects
