add spacer on mobile

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,5 @@ en:
   about: 'About'
   desc: >
     Labaki is just another multi-disciplinary, ever-evolving, problem-solving design studio. Isn't it?
-  website-h:  http://www.heterodox.design/en/projects 
+  website-h:  http://www.heterodox.design/en/projects
+  ref: 'References & Media'
