--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -22,3 +22,4 @@ fr:
   desc: >
     Labaki est un studio de design multidisciplinaire engagé à améliorer l'habitabilité du monde. Comme tous les autres, non?
   website-h: http://www.heterodox.design/fr/projects
+  ref: 'Références & Médias'
