Modify Social Links

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,7 +16,8 @@ en:
   about-text: Nowadays, every studio seems to have adopted design’s new definition. They’re all moving beyond pure looks and aesthetics, and instead, addressing core issues or challenges. This shift led them to broaden their scope, their methodology is now “holitistic” and their works multi-disciplinary. Studios create anything - products, graphics, systems - that resolves a problem. And us? We’re essentially doing the same. Aren’t we?
   reach-out: 'Reach out on'
   medium: 'by'
-  byphone: 'or phone'
+  byphone: 'or'
+  device-call: 'phone.'
   about: 'About'
   desc: >
     Labaki is just another multi-disciplinary, ever-evolving, problem-solving design studio. Isn't it?
